--- a/UI-MVC/UI-MVC.csproj
+++ b/UI-MVC/UI-MVC.csproj
@@ -290,13 +290,13 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\DOM\Domain.csproj">
-      <Project>{540d40e9-9d5c-4c2d-ace0-bb28ddcff37d}</Project>
-      <Name>Domain</Name>
-    </ProjectReference>
     <ProjectReference Include="..\BL\BL.csproj">
       <Project>{e02e9689-c627-4cf4-916d-df676423ac79}</Project>
       <Name>BL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Domain\Domain.csproj">
+      <Project>{bbc45856-b2d8-461b-9af9-9268d7f1032d}</Project>
+      <Name>Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
