added DOM classes

--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -40,9 +40,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Playlist\Comment.cs" />
+    <Compile Include="Organisation\DashboardBlock.cs" />
+    <Compile Include="Organisation\Organisation.cs" />
+    <Compile Include="Playlist\Playlist.cs" />
+    <Compile Include="Playlist\PlaylistTrack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User\Role.cs" />
+    <Compile Include="Playlist\SourceType.cs" />
+    <Compile Include="Playlist\Track.cs" />
+    <Compile Include="Playlist\TrackSource.cs" />
+    <Compile Include="User\User.cs" />
+    <Compile Include="User\Vote.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
