--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -40,7 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IOrganisationManager.cs" />
+    <Compile Include="IPlaylistManager.cs" />
+    <Compile Include="IUserManager.cs" />
+    <Compile Include="OrganisationManager.cs" />
+    <Compile Include="PlaylistManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
