--- a/UI-MVC/Web.config
+++ b/UI-MVC/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-UI-MVC-20160206103717.mdf;Initial Catalog=aspnet-UI-MVC-20160206103717;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="BeatBuddy" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-UI-MVC-20160206103717.mdf;Initial Catalog=aspnet-UI-MVC-20160206103717;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
