Implemented EF with the Azure db

--- a/DAL/App.config
+++ b/DAL/App.config
@@ -3,11 +3,21 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    
   </configSections>
+  <connectionStrings>
+    <add name="teamd_db"
+         connectionString="Data Source=teamd-db.database.windows.net;Initial Catalog=teamd_db;User ID=teamd@teamd-db;Password=Integratieproject2"
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <entityFramework>
+    <contexts>
+      <context type="BB.DAL.EFDbContext, BB">
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="mssqllocaldb" />
+        <parameter value="v11.0" />
       </parameters>
     </defaultConnectionFactory>
     <providers>
