You can now use Azure SQL db

--- a/DAL/App.config
+++ b/DAL/App.config
@@ -7,14 +7,10 @@
   </configSections>
   <connectionStrings>
     <add name="teamd_db"
-         connectionString="Data Source=teamd-db.database.windows.net;Initial Catalog=teamd_db;User ID=teamd@teamd-db;Password=Integratieproject2"
+         connectionString="Data Source=teamd-db.database.windows.net;Initial Catalog=teamd_db;User ID=teamd@teamd-db;Password=Integratieproject2;Encrypt=True;TrustServerCertificate=False;Connect Timeout=30;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
-    <contexts>
-      <context type="BB.DAL.EFDbContext, BB">
-      </context>
-    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="v11.0" />
