--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -53,13 +53,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IOrganisationManager.cs" />
-    <Compile Include="IPlaylistManager.cs" />
-    <Compile Include="IUserManager.cs" />
-    <Compile Include="OrganisationManager.cs" />
-    <Compile Include="PlaylistManager.cs" />
+    <Compile Include="Organisations\IOrganisationManager.cs" />
+    <Compile Include="Playlists\IPlaylistManager.cs" />
+    <Compile Include="Users\IUserManager.cs" />
+    <Compile Include="Organisations\OrganisationManager.cs" />
+    <Compile Include="Playlists\PlaylistManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserManager.cs" />
+    <Compile Include="Users\UserManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
