--- a/DAL/App.config
+++ b/DAL/App.config
@@ -6,8 +6,8 @@
     
   </configSections>
   <connectionStrings>
-    <add name="teamd_db"
-         connectionString="Data Source=teamd-db.database.windows.net;Initial Catalog=teamd_db;User ID=teamd@teamd-db;Password=Integratieproject2;Encrypt=True;TrustServerCertificate=False;Connect Timeout=30;"
+    <add name="BeatBuddy"
+         connectionString="Data Source=beatbuddy.database.windows.net;Initial Catalog=beatbuddy;User ID=teamd@beatbuddy;Password=Integratieproject2;Encrypt=True;TrustServerCertificate=False;Connect Timeout=30;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
