--- a/UI-MVC.Tests/App.config
+++ b/UI-MVC.Tests/App.config
@@ -9,7 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings></appSettings>
-  <connectionStrings></connectionStrings>
+  <connectionStrings>
+    <add name="BeatBuddy" connectionString="Data Source=.\SQLSERVER2012;Initial Catalog=BeatBuddy;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="BeatBuddyTest" connectionString="Data Source=.\SQLSERVER2012;Initial Catalog=BeatBuddyTest;Integrated Security=True" providerName="System.Data.SqlClient" />
+
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
