--- a/UI-MVC/Web.config
+++ b/UI-MVC/Web.config
@@ -10,6 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="BeatBuddy" connectionString="Data Source=.\SQLSERVER2012;Initial Catalog=BeatBuddy;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="BeatBuddyTest" connectionString="Data Source=.\SQLSERVER2012;Initial Catalog=BeatBuddyTest;Integrated Security=True" providerName="System.Data.SqlClient" />
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
