--- a/BL/packages.config
+++ b/BL/packages.config
@@ -1,5 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.7.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Google.Apis" version="1.10.0" targetFramework="net452" />
+  <package id="Google.Apis.Auth" version="1.10.0" targetFramework="net452" />
+  <package id="Google.Apis.Core" version="1.10.0" targetFramework="net452" />
+  <package id="Google.Apis.YouTube.v3" version="1.10.0.1620" targetFramework="net452" />
+  <package id="Google.GData.Client" version="2.2.0.0" targetFramework="net452" />
+  <package id="Google.GData.Extensions" version="2.2.0.0" targetFramework="net452" />
+  <package id="Google.GData.YouTube" version="2.2.0.0" targetFramework="net452" />
+  <package id="log4net" version="2.0.3" targetFramework="net452" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net452" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net452" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net452" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net452" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
+  <package id="Zlib.Portable.Signed" version="1.11.0" targetFramework="net452" />
 </packages>
