--- a/UI-MVC.Tests/App.config
+++ b/UI-MVC.Tests/App.config
@@ -10,9 +10,9 @@
   </configSections>
   <appSettings></appSettings>
   <connectionStrings>
-    <add name="BeatBuddy" connectionString="Data Source=.\SQLSERVER2012;Initial Catalog=BeatBuddy;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="BeatBuddyTest" connectionString="Data Source=.\SQLSERVER2012;Initial Catalog=BeatBuddyTest;Integrated Security=True" providerName="System.Data.SqlClient" />
-
+    <add name="BeatBuddyTest"
+         connectionString="Data Source=www.mavamaarten.be\SQLSERVER2012;Initial Catalog=beatbuddyTest;Persist Security Info=True;User ID=teamd;Password=Integratieproject2"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
