--- a/DAL/App.config
+++ b/DAL/App.config
@@ -7,7 +7,10 @@
   </configSections>
   <connectionStrings>
     <add name="BeatBuddy"
-         connectionString="Data Source=beatbuddy.database.windows.net;Initial Catalog=beatbuddy;User ID=teamd@beatbuddy;Password=Integratieproject2;Encrypt=True;TrustServerCertificate=False;Connect Timeout=30;"
+         connectionString="Data Source=www.mavamaarten.be\SQLSERVER2012;Initial Catalog=beatbuddy;Persist Security Info=True;User ID=teamd;Password=Integratieproject2"
+         providerName="System.Data.SqlClient" />
+    <add name="BeatBuddyTest"
+         connectionString="Data Source=www.mavamaarten.be\SQLSERVER2012;Initial Catalog=beatbuddyTest;Persist Security Info=True;User ID=teamd;Password=Integratieproject2"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
