--- a/UI-MVC/Web.config
+++ b/UI-MVC/Web.config
@@ -9,12 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="BeatBuddy"
-         connectionString="Data Source=www.mavamaarten.be\SQLSERVER2012;Initial Catalog=beatbuddy;Persist Security Info=True;User ID=teamd;Password=Integratieproject2"
-         providerName="System.Data.SqlClient" />
-    <add name="BeatBuddyTest"
-         connectionString="Data Source=www.mavamaarten.be\SQLSERVER2012;Initial Catalog=beatbuddyTest;Persist Security Info=True;User ID=teamd;Password=Integratieproject2"
-         providerName="System.Data.SqlClient" />
+    <add name="BeatBuddy" connectionString="Data Source=www.mavamaarten.be\SQLSERVER2012;Initial Catalog=beatbuddy;Persist Security Info=True;User ID=teamd;Password=Integratieproject2" providerName="System.Data.SqlClient" />
+    <add name="BeatBuddyTest" connectionString="Data Source=www.mavamaarten.be\SQLSERVER2012;Initial Catalog=beatbuddyTest;Persist Security Info=True;User ID=teamd;Password=Integratieproject2" providerName="System.Data.SqlClient" />
     
 
     
