--- a/UI-MVC/Web.config
+++ b/UI-MVC/Web.config
@@ -23,6 +23,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     
     <add key="OrganisationsImgPath" value="~/App_Data/Img/Organisations" />
+    <add key="PlaylistImgPath" value="~/App_Data/Img/Playlists"/>
     <add key="UsersImgPath" value="~/App_Data/Img/Users" />
 
   </appSettings>
