--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Playlists\TrackSource.cs" />
     <Compile Include="Users\User.cs" />
     <Compile Include="Playlists\Vote.cs" />
+    <Compile Include="Users\UserRole.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
