--- a/UI-MVC/Web.config
+++ b/UI-MVC/Web.config
@@ -18,9 +18,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     
-    <add key="OrganisationsImgPath" value="~/App_Data/Img/Organisations" />
-    <add key="PlaylistImgPath" value="~/App_Data/Img/Playlists"/>
-    <add key="UsersImgPath" value="~/App_Data/Img/Users" />
+    <add key="OrganisationsImgPath" value="~/Content/img/Organisations" />
+    <add key="PlaylistImgPath" value="~/Content/img/Playlists"/>
+    <add key="UsersImgPath" value="~/Content/img/Users" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
