--- a/UI-MVC/compilerconfig.json
+++ b/UI-MVC/compilerconfig.json
@@ -6,5 +6,9 @@
   {
     "outputFile": "Content/bootstrap-grid.css",
     "inputFile": "Content/bootstrap-grid.scss"
+  },
+  {
+    "outputFile": "Content/LoggedIn.css",
+    "inputFile": "Content/LoggedIn.scss"
   }
 ]
