--- a/UI-MVC/UI-MVC.csproj
+++ b/UI-MVC/UI-MVC.csproj
@@ -269,13 +269,13 @@
     <Content Include="Content\img\party-dj.png" />
     <Content Include="Content\img\playlist.png" />
     <Content Include="Content\img\round_shape_loader.gif" />
-    <Content Include="Content\LoggedIn.css">
-      <DependentUpon>LoggedIn.scss</DependentUpon>
-    </Content>
-    <Content Include="Content\LoggedIn.min.css">
-      <DependentUpon>LoggedIn.css</DependentUpon>
-    </Content>
     <Content Include="Content\modal.css" />
+    <Content Include="Content\Portal.css">
+      <DependentUpon>Portal.scss</DependentUpon>
+    </Content>
+    <Content Include="Content\Portal.min.css">
+      <DependentUpon>Portal.css</DependentUpon>
+    </Content>
     <Content Include="Content\Site.css">
       <DependentUpon>Site.scss</DependentUpon>
     </Content>
@@ -292,7 +292,7 @@
     <None Include="compilerconfig.json.defaults">
       <DependentUpon>compilerconfig.json</DependentUpon>
     </None>
-    <Content Include="Content\LoggedIn.scss" />
+    <Content Include="Content\Portal.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -348,7 +348,7 @@
     <Content Include="Views\Playlist\AddTrack.cshtml" />
     <Content Include="Views\Playlist\View.cshtml" />
     <Content Include="Views\Playlist\PlaylistTable.cshtml" />
-    <Content Include="Views\Home\LoggedIn.cshtml" />
+    <Content Include="Views\Home\Portal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\Img\Organisations\" />
