Fixed ugly footer

--- a/UI-MVC/UI-MVC.csproj
+++ b/UI-MVC/UI-MVC.csproj
@@ -275,6 +275,9 @@
     <Content Include="Content\img\registerbanner.jpg" />
     <Content Include="Content\img\round_shape_loader.gif" />
     <Content Include="Content\img\song-note.png" />
+    <Content Include="Content\Portal.css">
+      <DependentUpon>Portal.scss</DependentUpon>
+    </Content>
     <Content Include="Content\Portal.min.css">
       <DependentUpon>Portal.css</DependentUpon>
     </Content>
